// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumField> tests <NumField> - decimal rendering 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'salary'}
      isRequired={true}
    >
      <TextInput
      type={'number'}
      name={'salary'}
      isDisabled={false}
      id={'id'}
      placeholder={''}
      step={0.01} max={900.5} min={400.5}
      value={salary}
      onChange={(e, newValue) => set__salary(Number(newValue))}
    />
    </FormGroup>"
`;

exports[`<NumField> tests <NumField> - integer rendering - disabled 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'age'}
      isRequired={true}
    >
      <TextInput
      type={'number'}
      name={'age'}
      isDisabled={true}
      id={'id'}
      placeholder={''}
      step={1} max={15} min={10}
      value={age}
      onChange={(e, newValue) => set__age(Number(newValue))}
    />
    </FormGroup>"
`;

exports[`<NumField> tests <NumField> - integer rendering 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'age'}
      isRequired={true}
    >
      <TextInput
      type={'number'}
      name={'age'}
      isDisabled={false}
      id={'id'}
      placeholder={''}
      step={1} max={15} min={10}
      value={age}
      onChange={(e, newValue) => set__age(Number(newValue))}
    />
    </FormGroup>"
`;
